<resources>
    <string name="app_name" translatable="false">Weather Now°</string>
    <string name="network_call_has_failed">"Network call has failed: "</string>
    <string name="no_such_city">No such city!</string>
    <string name="no_cities_found">No cities found with these longitude , latitude</string>
    <string name="network_call_failure">Network call has failed: %1$s</string>
    <string name="permission_denied">Permission denied.</string>
    <string name="alarm_successfully">Alarm scheduled successfully.</string>
    <string name="permission_required">Permission Required</string>
    <string name="alert_dialog_message">This feature requires permission to proceed. Please grant the necessary permission in the app settings.</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="cancel">Cancel</string>
    <string name="item_deleted">Item Deleted!</string>
    <string name="undo">Undo</string>
    <string name="delete_all_message">Are you sure you want to delete all?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="mm">mm</string>
    <string name="location_permit_needed">Location permission is needed to show weather here</string>
    <string name="please_repeat">Please repeat</string>
    <string name="slow_speech">please speak slower</string>
    <string name="current_weather">"Current weather: "</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="location_cannot_be_traced">Location cannot be traced</string>
    <string name="km_h">" km/h"</string>
    <string name="percent">%</string>
    <string name="tomorrow_s_weather">Tomorrow\'s Weather</string>
    <string name="weather_status">"Weather Status: "</string>
    <string name="average_temperature">" Average Temperature: "</string>
    <string name="error">Error</string>
    <string name="allow_all_the_time">Please select allow all the time from settings.</string>
    <string name="manage_favorites">Manage Favorites</string>
    <string name="history">History</string>
    <string name="delete_all">Delete All</string>
    <string name="enter_a_location_name">Enter a location name</string>
    <string name="click_to_see_more_info">Click to see more info</string>
    <string name="give_location_permissions">Give location permissions</string>
    <string name="set_weather_alarm">Set Weather Alarm</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="Sunrise">Sunrise</string>
    <string name="Sunset">Sunset</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="moonrise">Moonrise</string>
    <string name="time">time</string>
    <string name="moonset">Moonset</string>
    <string name="show_in_maps">Show In Maps</string>
    <string name="text">Text</string>
    <string name="home">Home</string>
    <string name="pm_pm" translatable="false">pm</string>
    <string name="favourites">favourites</string>
    <string name="network_failure_reason">"Network call has failed for the following reason: "</string>
    <string name="last_updated">Last Updated Time: </string>
    <string name="exception_caught">Some exception caught</string>
    <string name="schedule_tomorrows">Schedule Tomorrow\'s weather</string>
    <string name="home_location_permission">Location permission is needed to show weather here</string>
    <string name="home_rationale_title">Location Permission Required</string>
    <string name="home_rationale_message">This feature requires location permission to proceed. Please grant the necessary permission in the app settings.</string>
    <string name="home_rationale_settings">Go to Settings</string>
    <string name="sunny">Sunny</string>
    <string name="clear">Clear</string>
    <string name="partly_cloudy">Partly Cloudy</string>
    <string name="cloudy">Cloudy</string>
    <string name="overcast">Overcast</string>
    <string name="mist">Mist</string>
    <string name="patchy_rain_possible">Patchy rain possible</string>
    <string name="patchy_snow_possible">Patchy snow possible</string>
    <string name="patchy_sleet">Patchy sleet possible</string>
    <string name="patchy_freezing_drizzle">Patchy freezing drizzle possible</string>
    <string name="thundery_outbreaks_possible">Thundery outbreaks possible</string>
    <string name="blowing_snow">Blowing snow</string>
    <string name="blizzard">Blizzard</string>
    <string name="fog">Fog</string>
    <string name="freezing_fog">Freezing fog</string>
    <string name="patchy_light_drizzle">Patchy light drizzle</string>
    <string name="light_drizzle">Light drizzle</string>
    <string name="freezing_drizzle">Freezing drizzle</string>
    <string name="heavy_freezing_drizzle">Heavy freezing drizzle</string>
    <string name="patchy_light_rain">Patchy light rain</string>
    <string name="light_rain">Light rain</string>
    <string name="moderate_rain_at_times">Moderate rain at times</string>
    <string name="moderate_rain">Moderate rain</string>
    <string name="heavy_rain_at_times">Heavy rain at times</string>
    <string name="heavy_rain">Heavy rain</string>
    <string name="light_freezing_rain">Light freezing rain</string>
    <string name="moderate_or_heavy_freezing_rain">Moderate or heavy freezing rain</string>
    <string name="light_sleet">Light sleet</string>
    <string name="moderate_or_heavy_sleet">Moderate or heavy sleet</string>
    <string name="patchy_light_snow">Patchy light snow</string>
    <string name="light_snow">Light snow</string>
    <string name="patchy_moderate_snow">Patchy moderate snow</string>
    <string name="moderate_snow">Moderate snow</string>
    <string name="patchy_heavy_snow">Patchy heavy snow</string>
    <string name="heavy_snow">Heavy snow</string>
    <string name="ice_pellets">Ice pellets</string>
    <string name="light_rain_shower">Light rain shower</string>
    <string name="moderate_or_heavy_rain_shower">Moderate or heavy rain shower</string>
    <string name="torrential_rain_shower">Torrential rain shower</string>
    <string name="light_sleet_showers">Light sleet showers</string>
    <string name="moderate_or_heavy_sleet_showers">Moderate or heavy sleet showers</string>
    <string name="light_snow_showers">Light snow showers</string>
    <string name="moderate_or_heavy_snow_showers">Moderate or heavy snow showers</string>
    <string name="light_showers_of_ice_pellets">Light showers of ice pellets</string>
    <string name="moderate_or_heavy_showers_of_ice_pelltes">Moderate or heavy showers of ice pellets</string>
    <string name="patchy_light_rain_with_thunder">Patchy light rain with thunder</string>
    <string name="moderate_or_heavy_rain_with_thunder">Moderate or heavy rain with thunder</string>
    <string name="patchy_light_snow_with_thunder">Patchy light snow with thunder</string>
    <string name="moderate_or_heavy_snow_with_thunder">Moderate or heavy snow with thunder</string>
    <string name="feels_like">Feels Like</string>
    <string name="PM">PM</string>
    <string name="AM">AM</string>
    <string name="notifications_permission_denied">Notifications permission denied.</string>
    <string name="allow_permission_denied">Location : \'Allow All The Time\' permission denied.</string>
    <string name="alarm_scheduled_successfully">Alarm scheduled successfully.</string>
    <string name="location_allow_all_the_time_is_needed">Location Allow all the time is needed</string>
    <string name="require_permission_future_weather">This feature requires permission to proceed. Please select location -> Allow all the time to get notified for future weather</string>
    <string name="notifications_permission_required">Notifications Permission Required</string>
    <string name="feature_requires_permission">This feature requires permission to proceed. If you are willing to get notifications and see futrue forecast that\'s needed</string>
    <string name="ok">Ok</string>
    <string name="chosen_time">Chosen time : %1$s</string>
    <string name="choose_time">Choose time</string>
    <string name="disable_alarm">Disable Alarm</string>
    <string name="the_alarm_is_disabled">The alarm is disabled</string>
    <string name="add_city_to_favorites"> * Add city to Favorites</string>
    <string name="go_to_favorites_screen"> * Go to Favorites screen</string>
    <string name="choose_an_option">Choose an Option</string>
    <string name="periodicuniquejob1" translatable="false" >PeriodicUniqueJob1</string>
    <string name="alarm_text_disable_2">The alarm disable button will be shown as soon as you set an alarm first</string>
    <string name="alarm_text_disable_1">In this page , you can set notifications in the background showing your next day forecast</string>
    <string name="please_allow_our_app_in_alarms_remainders">Please Allow our app in Alarms and Remainders></string>
    <string name="inorder_to_be_able_to_choose_time_you_will_be_needed_to_allow_in_alarms_remainders_our_app_that_feature_allows_our_application_to_show_you_the_weather_forecast_for_tommorow"> In order to be able to choose time you will be needed to allow in alarms and remainders our app.\n That feature allows our application to show you the weather forecast for tommorow</string>
    <string name="patchy_rain_nearby">Patchy rain nearby</string>
    <string name="patchy_snow_nearby">Patchy snow nearby</string>
    <string name="patchy_sleet_nearby">Patchy sleet nearby</string>
    <string name="patchy_freezing_drizzle_nearby">Patchy freezing drizzle nearby</string>
    <string name="thundery_outbreaks_in_nearby">Thundery outbreaks in nearby</string>
    <string name="moderate_or_heavy_rain_in_area_with_thunder">Moderate or heavy rain in area with thunder</string>
    <string name="patchy_light_snow_in_area_with_thunder">Patchy light snow in area with thunder</string>
    <string name="moderate_or_heavy_snow_in_area_with_thunder">Moderate or heavy snow in area with thunder</string>
    <string name="time_picked" translatable="false">time_picked</string>
    <string name="package1" translatable="false">package</string>
    <string name="_02d_02d" translatable="false">%02d:%02d</string>
    <string name="glide_image_alarm_url" translatable="false">https://www.techyourchance.com/wp-content/uploads/2023/06/work-manager.jpg</string>
    <string name="fav_city" translatable="false">fav_city</string>
    <string name="city_history" translatable="false">city_history</string>
    <string name="city" translatable="false">city</string>
    <string name="nearby" translatable="false">nearby</string>
    <string name="am" translatable="false">AM</string>
    <string name="pm" translatable="false">PM</string>
    <string name="clear_untranslatable" translatable="false">Clear</string>
    <string name="https" translatable="false">https:</string>
    <string name="iw" translatable="false">iw</string>
    <string name="cloudy_untranslatable" translatable="false">cloudy</string>
    <string name="fog_untranslatable" translatable="false">fog</string>
    <string name="_1f" translatable="false">%.1f</string>
    <string name="date_format_untranslatable" translatable="false">yyyy-MM-dd</string>
    <string name="google_maps" translatable="false">com.google.android.apps.maps</string>
    <string name="geo_0_0_q" translatable="false">geo:0,0?q=%1$s</string>
    <string name="permissions">Permissions</string>
    <string name="geant_permissions_optimal_exp">Grant Weather Now° permissions for an optimal experience</string>
    <string name="location">Location</string>
    <string name="weather_instant_location">Instantly see weather at your location</string>
    <string name="push_notifications">Push notifications</string>
    <string name="never_miss_great_conditions">Never miss great conditions or important updates</string>
    <string name="skip">Skip</string>
    <string name="allow_all">Allow All</string>
</resources>