<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomePermissions.HomePermissionsFragment"
    android:background="@drawable/world_from_space">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/permissions"
        android:textSize="30sp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/geant_permissions_optimal_exp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"/>


    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp"
        android:id="@+id/card_location_perm"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="5dp"
        app:cardBackgroundColor="#65FFFFFF"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="3dp"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/white"
                    android:layout_weight="1"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/location_radio"
                    android:layout_gravity="end"
                    android:clickable="false"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/weather_instant_location"
                android:layout_marginLeft="10dp"
                android:textSize="15sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp"
        android:id="@+id/card_notification_perm"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="5dp"
        app:cardBackgroundColor="#5EFFFFFF"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="3dp"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/push_notifications"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/white"
                    android:layout_weight="1"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/permissions_radio"
                    android:layout_gravity="end"
                    android:clickable="false"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/never_miss_great_conditions"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:textSize="15sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>



<!--    bottom buttons-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:textSize="13sp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/skip"
            android:layout_margin="10dp"
            android:textColor="#ffffff"
            android:id="@+id/btn_skip"
            android:layout_weight="0.1"
            android:background="@drawable/rounded_outlined_btn"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:textSize="13sp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/allow_all"
            android:layout_margin="10dp"
            android:textColor="#ffffff"
            android:id="@+id/btn_allow_all"
            android:layout_weight="1"
            android:background="@drawable/rounded_outlined_btn"/>
    </LinearLayout>
</LinearLayout>