<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.HomeScreen.HomeScreenFragment"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/home_background"
    android:id="@+id/home_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_weight="0.1">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="#ffffff"
                        android:gravity="center"
                        android:imeOptions="actionSearch"
                        android:hint="@string/enter_a_location_name"
                        android:inputType="text"
                        android:id="@+id/city_text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/search_btn"
                    android:src="@drawable/baseline_search_24"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginStart="20dp"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/baseline_keyboard_voice_24"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="10dp"
                    android:id="@+id/btn_voice_recognition"/>

            </FrameLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="8dp"
                android:id="@+id/card_home_city"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="5dp"
                app:cardBackgroundColor="#33FFFFFF"
                android:visibility="gone"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="3dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/my_location_name"
                    android:layout_gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                android:id="@+id/card_home_temp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="5dp"
                app:cardBackgroundColor="#33FFFFFF"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="3dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/my_location_temp"
                    android:textSize="30sp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>


        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/card_home_someDetails"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="5dp"
            android:visibility="gone"
            app:cardBackgroundColor="#33FFFFFF"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image_current_condition"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/my_location_condition"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:padding="3dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone"/>


        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:visibility="gone"
            android:id="@+id/card_home_weekly"
            android:layout_marginRight="5dp"
            app:cardBackgroundColor="#33FFFFFF"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="3dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hours_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </androidx.cardview.widget.CardView>

        <Button
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:text="@string/click_to_see_more_info"
            android:visibility="gone"
            android:textColor="#ffffff"
            android:id="@+id/btn_show_more_info"
            app:icon="@drawable/baseline_info_24"
            style="?attr/materialButtonOutlinedStyle"/>

        <Button
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:text="@string/give_location_permissions"
            android:textColor="#ffffff"
            android:id="@+id/btn_grant_permissions"
            app:icon="@drawable/baseline_info_24"
            style="?attr/materialButtonOutlinedStyle"
            android:visibility="visible"/>


        <Button
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="13sp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/schedule_tomorrows"
            android:textColor="#ffffff"
            android:id="@+id/btn_notifictions_perm"
            app:icon="@drawable/baseline_access_alarm_24"
            style="?attr/materialButtonOutlinedStyle" />
    </LinearLayout>

</ScrollView>